# streamfox

./: .gitignore  DEVELOPMENT.md  Makefile  README.md  USAGE.md  pyproject.toml  requirements.txt  streamfox.py  streams.yaml
.github/workflows/: ci.yml
src/streamfox/: __init__.py  cli.py  crawler.py  monitor.py  playback_monitor.py  player.py  stream_pool.py  types.py
tests/: __init__.py  test_cli.py  test_crawler.py  test_monitor.py  test_player.py  test_quality_monitoring.py
